--- a/conferences.html
+++ b/conferences.html
@@ -90,7 +90,8 @@
  <!------------------------------------------------------------->
  The MEGA conferences (Effective Metheods in Algebraic Geometry)
     now have a permanent <a href="https://mega.sciencesconf.org/">web site</a> <BR>
-    I am one of the Co-chairs of the Executive Committee for MEGA 2024, along with Kaie Kubjas.
+    I am one of the Co-chairs of the Executive Committee for
+    <a href="https://www.mis.mpg.de/calendar/conferences/2024/mega.html">MEGA 2024</a>, along with Kaie Kubjas.
   <td align=left>
 <!-------------------------------------------------------------------->
 <!-------------------------------------------------------------------->
@@ -109,7 +110,8 @@
  <li>
    <a href="https://www.mis.mpg.de/calendar/conferences/2024/mega.html">Effective Methods in Algebraic Geometry (MEGA), 29 July &ndash; 2
    August 2024, Leipzig</a>. 
-   <a href="conferences/MEGA2024_poster.pdf">poster</a>
+   <a href="conferences/MEGA2024/MEGA2024_poster.pdf">poster</a> &nbsp; 
+   <a href="conferences/MEGA2024/Call.txt">Call for Participation</a>.
  </li>
  <!--------------------------------------------------------->
  <!--------------------------------------------------------->
