--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -21,6 +21,18 @@ Section  201
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
 <table><tr vaign=center> <td>
+<b>Thirteenth Homework (Due Thursday 30 November in recitation):</b>  &nbsp;
+Here is a <a href="221_HW/HW13.pdf">pdf</a> of the assignment.
+<a href="221_HW/HW13.tex">LaTeX source</a>, and some  images
+<a href="221_HW/images/HW13_1.pdf"><tt>HW13_1.pdf</tt></a>, 
+<a href="221_HW/images/HW13_2.pdf"><tt>HW13_2.pdf</tt></a>, 
+<a href="221_HW/images/HW13_3.pdf"><tt>HW13_3.pdf</tt></a>,  and 
+<a href="221_HW/images/HW13_4.pdf"><tt>HW13_4.pdf</tt></a>.
+</td></tr></table>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+<table><tr vaign=center> <td>
 <b>Twelfth Homework (Due Thursday 16 November in recitation):</b>  &nbsp;
 Here is a <a href="221_HW/HW12.pdf">pdf</a> of the assignment.
 <a href="221_HW/HW12.tex">LaTeX source</a>, and some  images
