--- a/teaching/23.2/653_HW.html
+++ b/teaching/23.2/653_HW.html
@@ -12,6 +12,7 @@
 <hr>
 <!------------------------------------------------------------------------->
 <dl>
+ <dd>  Assignment 13: <a href="653_HW/HW13.pdf">pdf</a> <a href="653_HW/HW13.tex">LaTeX</a> Due 4 December.</dd>
  <dd>  Assignment 12: <a href="653_HW/HW12.pdf">pdf</a> <a href="653_HW/HW12.tex">LaTeX</a> Due 27 November.</dd>
  <dd>  Assignment 11: <a href="653_HW/HW11.pdf">pdf</a> <a href="653_HW/HW11.tex">LaTeX</a> Due 15/17 November.</dd>
  <dd>  Assignment 10: <a href="653_HW/HW10.pdf">pdf</a> <a href="653_HW/HW10.tex">LaTeX</a> Due  6 November.</dd>
