added an abstract

--- a/talks.html
+++ b/talks.html
@@ -126,10 +126,39 @@
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>
+    <FONT COLOR="AA00FF"><I>The game of Criss-Cross</I></font>
+    Texas A&amp;M Math Circle&mdash;beginning,
+    9 December 2023.
+    <a href="talks/23/CrissCross.txt">abstract</a>
+    <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Colloquium, UT Dallas.
+    Deceember 1 2023,
+    <a href="talks/23/GGEGA.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+ <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Club &amp; SIAM Student Organization, UT Dallas,
+    1 December 2023.   <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+ <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Cardano and the Cubic</I></font>
     Texas A&amp;M Math Circle&mdash;advanced,
     11 November 2023.
-    <a href="talks/23/BlochDiscriminants.txt"></a>
+    <a href="talks/21/Cubic.txt">abstract</a>
     <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
@@ -165,14 +194,7 @@
    <a href="talks/23/SAGA.txt">Abstract</a>. 
   </li>
  <!---------------------------------------------------------------------------------------->
-
  <!---------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
- <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
     Graduate Student Organization Seminar, Texas A&ap;M University.
