updated some pages

--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -48,7 +48,7 @@
   &nbsp;  <a href="https://chiaradamiolini.wixsite.com/1289">Chiara Damiolini</a>       &nbsp; 
                 University of Texas   <br>
   &nbsp;  <a href="https://math.dartmouth.edu/~jduque/">Juanita Duque-Rosero</a>   &nbsp
-                ; Dartmouth College / Boston University  <br>
+                 Boston University  <br>
   &nbsp;  <a href="https://math.berkeley.edu/people/faculty/david-eisenbud">David Eisenbud</a>         &nbsp; 
                 University of California at Berkeley  <br>
   &nbsp;  <a href="https://sites.google.com/view/mariafox/">Maria Fox</a>              &nbsp;
@@ -56,7 +56,7 @@
   &nbsp;  <a href="http://alicialamarche.com/research">Alicia Lamarche</a>        &nbsp;
                  University of Utah  <br>
   &nbsp;  <a href="https://math.berkeley.edu/people/faculty/hannah-k-larson">Hannah Larson</a>          &nbsp;
-                 Harvard University / University of California at Berkeley  <br>
+                 University of California at Berkeley  <br>
   &nbsp;  <a href="http://web.math.unifi.it/users/ottaviani/">Giorgio Ottaviani</a>     &nbsp;
                  Universit&aacute; di Firenze <br>
   &nbsp;  <a href="https://www.math.uni-sb.de/ag/schreyer">Frank Schreyer</a>    &nbsp;
