added 629 web page

--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -26,7 +26,7 @@
                <font size=+2>College of Arts&nbsp;<br>&amp; Sciences</font>--> </table></td></tr>
       </table>
    </td>
-   <td rowspan="3" width=300><img src="SolarEclipse.jpg" width=300></td>
+   <td rowspan="3" width=300><img src="SolarEclipse.jpg" width=300></td>xc
   </tr>
   <!----------------------->
   <tr>
@@ -47,7 +47,7 @@
                  University of Georgia <br>
   &nbsp;  <a href="https://chiaradamiolini.wixsite.com/1289">Chiara Damiolini</a>       &nbsp; 
                 University of Texas   <br>
-  &nbsp;  <a href="https://math.dartmouth.edu/~jduque/">Juanita Duque-Rosero</a>   &nbsp
+  &nbsp;  <a href="https://juanitaduquer.github.io/">Juanita Duque-Rosero</a>   &nbsp
                  Boston University  <br>
   &nbsp;  <a href="https://math.berkeley.edu/people/faculty/david-eisenbud">David Eisenbud</a>         &nbsp; 
                 University of California at Berkeley  <br>
