--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
    </TR>
   <TR valign=top>
     <td colspan=2><b>News:</b>
-   
+
+      I am teaching a distance course the Winter/Spring 2024 term and will divide my time between College Station, the Newton Institute in
+      Cambridge and the Simons-Laufer Mathematics Institute in Berkeley.<br>
+      
       Samuel Sottile, my son and a Senior mathematics major at Michigan State University, was awarded a
       2023&ndash;4
       <a href="https://drive.google.com/file/d/1BPIvKT-nIQTXcYLDqkCyt-VEanbyGXE6/view">Churchill Scholarship</a>.
       View the
       <a href="https://msutoday.msu.edu/news/2023/msu-student-earns-churchill-scholarship">press release from MSU</a>.
-      I was a Churchill Scholar in 1985&ndash;6; Sam is the first Second-Generation Churchill Scholar.<br>
-
-      Dr. Thomas Yahl just graduated with his Ph.D. in Mathematics from Texas A&amp;M.
-      He is starting a van Vleck Assistant Professorship (a prestigious postdoc) at the University of Wisconsin in
-      Madison.<br> 
+      I was a Churchill Scholar in 1985&ndash;6; Sam is the first Second-Generation Churchill Scholar.
+      <br> 
 
       </td>
   </TR>
@@ -151,19 +151,14 @@
    <!-------------------------------------------------------------------------------->
   <hr>
   <!---------------------------------------------------------------------------------------------------->
-   <b><FONT SIZE=+1 color=brown>Fall 2023</font></b>
+   <b><FONT SIZE=+1 color=brown>Spring  2024</font></b>
    <table>
      <!-------------------------------------------------------------------------->
-    <tr><td><font color=brown>MATH 221H</font></td>
-      <td><a href="teaching/23.2/221H.html">Honors Multivariable Calculus</a> &nbsp; </td>
-      <td align=leftt>MWF 9:10&ndash;10:00</td><td>Bloc. 121</td>
+    <tr><td><font color=brown>MATH 629</font></td>
+      <td><a href="teaching/24.1/629.html">History of Mathematics</a> &nbsp; </td>
+      <td align=leftt>This is a distance course.</td>
      </tr>
-     <!-------------------------------------------------------------------------->
-   <tr><td><font color=brown>MATH 653</font> <!--Sect. 600--></td>
-       <td><a href="teaching/23.2/653.html">Algebra I</a>.</td>
-       <td>MWF 11:30&ndash;12:20</td><td>Bloc. 121</td>
-     </tr>
-   </table>
+  </table>
  <!------------------------------------------------------------------------------->
  <!----------  News and anouncements  --------------------------------------------->
    <hr>
@@ -374,7 +369,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sun Nov 12 14:47:49 CST 2023 by sottile</p>  
+<p>Last modified: Wed Jan 03 13:05:36 PST 2024 by sottile</p>  
  </body>
 </html> 
 
