--- a/advising/advising.html
+++ b/advising/advising.html
@@ -94,11 +94,11 @@ You needn't take my word on this, feel free to contact those who have worked wit
 <ul>
  <!------------------------------------------------------------------>
  <li>
-  <A HREF="https://tjyahl.github.io/">Thomas Yahl</a>, TAMU Ph.D. Student.
+  <A HREF="https://tjyahl.github.io/">Thomas Yahl</a>, TAMU Ph.D. 2023.
  </li>
  <!------------------------------------------------------------------>
  <li>
-  <A HREF="https://sites.google.com/view/elise-walker/">Elise Walker</a>, TAMU Ph.D. Student.
+  <A HREF="https://sites.google.com/view/elise-walker/">Elise Walker</a>, TAMU Ph.D. 2022.
  </li>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
