Getting 629 up and running

--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -6,21 +6,22 @@
   Math 629:  History of Mathematics
  </H1>
 
-<hr><font color=red size=+1>Under Construction!</font>
+ <hr><font color=red size=+1>Under Construction!  The types and dates of assignments are not correct, but the
+      <a href="weeks/W00.html">Week 0</a> is OK.</font>
  
 <!---------------------------------------------------------------------------------> 
 <HR>
 <!---------------------------------------------------------------------------------> 
-Piazza: <a href="https://piazza.com/tamu/spring2022/math629">Sign Up</a>  Access Code: <tt>314159265</tt>.
+Piazza: 
   &nbsp; &nbsp;
-<a href="https://piazza.com/tamu/spring2022/math629/home">Piazza Class page</a>.
+        <a href="https://piazza.com/tamu/spring2024/math629/home">Piazza Class page</a>.
 <!--------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------> 
+<!----------------------------------------------
 <HR>
-<!---------------------------------------------------------------------------------> 
 Sign up to Gradescope:  Entry Code: <tt>N8B2BP</tt>.
   &nbsp; &nbsp;
-<a href="https://www.gradescope.com/courses/354924">Our Class</a>.
+<a href="https://www.gradescope.com/courses/354924">Our Class</a>.-----------------------------------> 
 <!--------------------------------------------------------------------------------->
 <!--------------------------------------------------------------------------------->
 <hr>
@@ -47,19 +48,18 @@ Information for
 
 
 <!--------------------------------------------------------->
-<HR>
 <!--------------------------------------------------------->
 <!--------------------------------------------------------->
+ <!-- <HR>
   Information about your <a href="Term_paper.html">Term Paper</a>.<br>
- <!--     Information for building your <a href="Hyperbolic_Soccerballs.html">Hyperbolic soccer ball</a>.
-    <a href="triangle.gif">View</a> your triangle data.<br>-->
+    Information for building your <a href="Hyperbolic_Soccerballs.html">Hyperbolic soccer ball</a>.
+    <a href="triangle.gif">View</a> your triangle data.<br>
    Information about your <a href="Second_paper.html">Second Paper </a>.<br>
-  Information about <a href="Book_Review.html">Book Review</a>.<br>
   You will need to both email a .pdf to me at <TT><a href="mailto:sottile@tamu.edu">sottile@tamu.edu</a></TT>,
   and submit it to turnitin.com.<br>
   Here is the information for our class:<br>
   <font color=magenta>Math 629 History of Mathematics &nbsp; &nbsp;  Class ID:  33187690 &nbsp; &nbsp; Class Enrollment Key:
-    Sottile629</font><br>  
+    Sottile629</font><br>  -->
 <!--------------------------------------------------------->
 <HR>
 <!-------------------------------------------------------------->
@@ -80,7 +80,7 @@ Information for
    <TD colspan=1 align=left>
      <IMG SRC="../../images/dot.gif">
      Office: Blocker 601 k.
-<!--     <br> &nbsp; &nbsp; I will also be in in France (19 April&ndash;2 May).-->
+     <br> &nbsp; &nbsp; This semester I will mostly be in Cambridge UK and Berkeley, CA.
     <BR>
      <IMG SRC="../../images/dot.gif"> Email: 
      <TT><a href="mailto:sottile@tamu.edu">sottile@tamu.edu</a></TT>
@@ -88,30 +88,26 @@ Information for
         contact Frank,</font> after Piazza.
     <BR>
      <IMG SRC="../../images/dot.gif"> WWW:
-      <a href="https://www.math.tamu.edu/~sottile"><TT>www.math.tamu.edu/~sottile</TT></a>
+      <a href="https://franksottile.github.io/"><TT>franksottile.github.io/</TT></a>
    </TD>
   </TR>
   <!------------------------------>
   <TR valign=top>
    <TD colspan=2>
      <EM><FONT COLOR=AA00FF>Grader:</FONT></EM>
-     <A HREF="http://www.math.tamu.edu/~walkere"></A>Priyanga Ganesan.   email: 
-     <TT><a href="mailto:priyanga.g@tamu.edu">priyanga.g@tamu.edu</a></TT>
-     <br>
-     Use this only for asking questions of the grader.  </TD>
+     <A HREF="http://www.math.tamu.edu/~walkere"></A>Ryan Malthaner. 
+ <!--    <br>
+     Use this only for asking questions of the grader. --> </TD>
   </tr>
    <!------------------------------>
  <TR>
    <TD colspan=2><FONT COLOR=AA00FF><EM>Required Texts:</EM></FONT>
      <I><font color=blue>Mathematics and its History</font></I>, Third edition, by John Stillwell.
      <br> &nbsp; It is possible to download a <b>free version</b> of the text through the TAMU library.
-     <br> &nbsp;   Prof.&nbsp;Allen's on-line
-     <a href="http://www.math.tamu.edu/~don.allen/masters/index.htm">class notes</a>.
-     <br> &nbsp; Another resource is The University of St.&nbsp;Andrew's 
-     <br> &nbsp;  <a href="http://www-history.mcs.st-and.ac.uk/Indexes/HistoryTopics.html">MacTutor History
+    <br> &nbsp; Another resource is The University of St.&nbsp;Andrew's 
+     <br> &nbsp;  <a href="https://mathshistory.st-andrews.ac.uk/">MacTutor History
      of Mathematics archive</a>, particularly its 
-     <br> &nbsp; resource page on the
-     <a href="http://www-history.mcs.st-and.ac.uk/Indexes/HistoryTopics.html">History of
+     <br> &nbsp; resource page on the <a href="https://mathshistory.st-andrews.ac.uk/Indexes/HistoryTopics.html">History of
      Mathematics</a>.
       
    </TD>
@@ -130,21 +126,21 @@ Information for
  <!----------------->
  <TR valign=top> <td colspan=2><FONT COLOR=AA00FF><B>Course Forum</B>:</FONT>
     This term we will be using Piazza for class discussion.<br>
-   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; The system is highly catered to getting you help fast and efficiently from classmates, <br>
-   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Elise, and me.
-     Rather than emailing questions to us, post them on Piazza. <br>
+   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; This was chosen to get you help fast and efficiently from classmates, <br>
+   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Ryan, and me.
+     Rather than emailing questions, post them on Piazza. <br>
    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; For technical prolems with that site email
       <a href="mailto:team@piazza.com"><tt>team@piazza.com</tt></a>.  They are very responsive.<br>
      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-    Our <a href="https://piazza.com/tamu/spring2020/math629/home">class page</a>.
+    Our <a href="https://piazza.com/tamu/spring2024/math629/home">class page</a>.
     </TD>
    </TR> 
  <!----------------->
  <TR>
   <TD colspan=4>               
     <I><FONT COLOR=AA00FF>Course webpage: </FONT> </I>
-    <A HREF="http://www.math.tamu.edu/~sottile/teaching/20.1/629/629.html">
-     <TT>www.math.tamu.edu/~sottile/teaching/20.1/629/629.html</TT></A>
+    <A HREF="https://franksottile.github.io/teaching/24.1/629.html">
+     <TT>franksottile.github.io/teaching/24.1/629.html</TT></A>
   </TD>
  </TR>
 </TABLE>
@@ -169,12 +165,13 @@ leaving honorifics at the door of our classroom facilitates discourse.
 <HR>
 <!------------------------------------------------------------------------>
 <FONT SIZE=+1 COLOR=880000>How this course will be run</FONT> <BR>
-Each week, I will assign reading, from Stillwell, as well as on-line sources.
+Each week, I will assign reading, from Stillwell, and some on-line sources.
 I will write weekly guides, as well as help to moderate our class forum on Piazza.
 Most weeks, I will assign homework, which will be submitted via  <font color=red>Gradescope</font>.
-I will also regularly assign a short, timed, concept quiz on the reading, which will also be done on Gradescope.<br>
+<!--I will also regularly assign a short, timed, concept quiz on the reading, which will also be done on Gradescope.-->
+<br>
 
-There will be three written assignments: a <a href="Book_Review.html">book review</a>, a short paper, and a term paper.
+There will be two written assignments: a short paper, and a term paper.
 These will be submitted both to turnitin.com and to me in .pdf.
 <br>
 
@@ -217,7 +214,7 @@ A value of having the community of scholars that is a University is interaction 
   </tr>
   <tr>
     <td></td><td>
-      <a href="https://piazza.com/tamu/spring2022/math629/home">Piazza Participation</a> &nbsp;  
+      <a href="https://piazza.com/tamu/spring2024/math629/home">Piazza Participation</a> &nbsp;  
       &nbsp; &nbsp; &nbsp;
     </td> <td> 40 </td>
   </tr>
@@ -239,10 +236,10 @@ I will want you to have a topic chosen by early March.
 <br>
 
 
-<!------------------------------------------------------------------------>
-<!------------------------------------------------------------------------>
+<!---------------------------------------------------------------------------------------------------->
 <!--<HR>-->
-<!------------------------------------------------------------------------>
+<!---------------------------------------------------------------------------------------------------->
+
 
 <HR>
 I have a long-standing interest in mathematics history, including biography, and have
@@ -251,15 +248,12 @@ The is the third time I have taught this course (the others were in 2017 and 201
 This course was created by colleagues at Texas A&amp;M, and I followed their lead when I
 first designed it. <br>
 
-Most notably Prof.&nbsp;Allen created this course and developed extensive on-line notes on
+Most notably Professor Emeritus Allen created this course and developed extensive on-line notes on
 the history of mathematics, some of which we will be using.
-Here are links to some recent times that other faculty have taught this.
-<a href="https://www.math.tamu.edu/~roquesol/Math_629_Spring_2019.html">Dr.&nbsp;Marco Antonio Roque-Sol 2019</a>, &nbsp;
-<a href="http://calclab.math.tamu.edu/~fulling/m629/">Prof.&nbsp;Fulling 2015</a>, &nbsp;
-<a href="http://distance-ed.math.tamu.edu/math629_10C/index.htm">Prof.&nbsp;Allen 2010</a>, &nbsp;
-<a href="http://www.math.tamu.edu/~geller/math629/math629home.html">Prof.&nbsp;Geller 2005</a>.
+I have also been greatly helped by Professor Emeritus Fulling and Professor Emerita Geller</a>.
 
 <!--------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------------------->
 <a href="syllabus.html">Required Disclaimers</a>.
@@ -267,20 +261,11 @@ Here are links to some recent times that other faculty have taught this.
 <HR>
 <!--------------------------------------------------------------------->
 <address></address>
-<!---------------------------------------------------------------------------->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-12943815-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-<!---------------------------------------------------------------------------->
+
+<!---------------------------------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Apr 19 09:41:25 CDT 2020--> <!-- hhmts end -->
-<p>Last modified: Wed Jan 03 13:32:06 PST 2024 by sottile</p>
-<!---------------------------------------------------------------------------->
+<p>Last modified: Sat Jan 13 20:13:48 GMT 2024 by sottile</p>
+<!---------------------------------------------------------------------------------------------------->
 </body> </html>
 
 
