publishing my course

--- a/talks.html
+++ b/talks.html
@@ -120,7 +120,8 @@
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
-    Applied and computational algebraic geometry (EMGW02), 22 &ndash; 26 January 2024, Isaac Newton Institute. 
+    <a href="https://www.newton.ac.uk/event/emgw02/">Applied and computational algebraic geometry</a>,
+    22 &ndash; 26 January 2024, Isaac Newton Institute. 
    <a href="talks/24/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
