--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -6,8 +6,8 @@
   Math 629:  History of Mathematics
  </H1>
 
- <hr><font color=red size=+1>Under Construction!  The types and dates of assignments are not correct, but the
-      <a href="weeks/W00.html">Week 0</a> is OK.</font>
+ <hr><font color=red size=+1>Under Construction!  The required disclaimers have not been added, but
+   <a href="weeks/W00.html">Week 0</a> is OK.</font>
  
 <!---------------------------------------------------------------------------------> 
 <HR>
@@ -71,7 +71,7 @@ Information for
         <A HREF="../../index.html">Frank Sottile</A>
     </TD><td width=15pt></td>
     <TD valign=top rowspan=5>
-     <IMG height=350 src="Stillwell.jpg"> 
+     <a href="http://proxy.library.tamu.edu/login?url=https://dx.doi.org/10.1007/978-1-4419-6053-5"><IMG height=350 src="Stillwell.jpg"></a>
    </TD>
   </TR>
   <!----------------->
@@ -103,7 +103,8 @@ Information for
  <TR>
    <TD colspan=2><FONT COLOR=AA00FF><EM>Required Texts:</EM></FONT>
      <I><font color=blue>Mathematics and its History</font></I>, Third edition, by John Stillwell.
-     <br> &nbsp; It is possible to download a <b>free version</b> of the text through the TAMU library.
+     <br> &nbsp; It is possible to <a href="http://proxy.library.tamu.edu/login?url=https://dx.doi.org/10.1007/978-1-4419-6053-5">download
+     a <b>free version</b> of the text through the TAMU library</a>. 
     <br> &nbsp; Another resource is The University of St.&nbsp;Andrew's 
      <br> &nbsp;  <a href="https://mathshistory.st-andrews.ac.uk/">MacTutor History
      of Mathematics archive</a>, particularly its 
@@ -117,8 +118,10 @@ Information for
   <TD colspan=2>               
     <I><FONT COLOR=AA00FF>Additional Materials: </FONT> </I>
     There is significant content about mathematics and its history
-     <br> &nbsp;  on the web,
-    and many, many accessible books on the subject.
+     <br> &nbsp;  on the web,and many, many accessible books on the subject.
+     <br>
+     Because of the sheer volume of material, I am interested in anything any 
+     <br>  &nbsp; students in this class find useful.
      <br>
      &nbsp; Professor Fulling's <a href="../17.1/Other_Texts.html">list</a> of other general histories of mathematics.
   </TD>
@@ -165,20 +168,25 @@ leaving honorifics at the door of our classroom facilitates discourse.
 <HR>
 <!------------------------------------------------------------------------>
 <FONT SIZE=+1 COLOR=880000>How this course will be run</FONT> <BR>
-Each week, I will assign reading, from Stillwell, and some on-line sources.
+Each week, I will assign reading, mostly from Stillwell, and some on-line sources.
 I will write weekly guides, as well as help to moderate our class forum on Piazza.
 Most weeks, I will assign homework, which will be submitted via  <font color=red>Gradescope</font>.
-<!--I will also regularly assign a short, timed, concept quiz on the reading, which will also be done on Gradescope.-->
+Some problems are to be done in groups, but not handed in; these will form the basis of the short group quizzes.
+There will be two hands-on projects that involve constructing a mathematical object.
+I will also regularly assign a short, timed, concept quiz on the reading, which will also be done on Gradescope.
+<font color=red>In response to feedback from past students, there will be somewhat less homework assigned than in the past, particularly
+  mathematical problems vs. history questions.</font>
 <br>
 
-There will be two written assignments: a short paper, and a term paper.
+There will be two written assignments: a short paper and a term paper.
 These will be submitted both to turnitin.com and to me in .pdf.
 <br>
 
-These papers are the major forms of assessment in this class, reflecting that History of
+These papers are a major form of assessment in this class, reflecting that History of
 Mathematics is a hybrid of mathematics and the humanities.
+There will also be an oral quiz involving problems from the assignments, done in small groups.
 I will also give credit to non-anonymous participation in the on-line discussion through Piazza.
-This will be in the form of up to 40 points (=6.25%) on the scale below.
+This will be in the form of up to 40 points (=6.66%) on the scale below.
 A value of having the community of scholars that is a University is interaction with one's peers.
 
 <!------------------------------------------------------------------------>
@@ -195,45 +203,57 @@ A value of having the community of scholars that is a University is interaction 
     </td> <td> 200 </td>
   </tr>
   <tr>
-    <td></td><td>
+<!--    <td></td><td>
       <a href="Book_Review.html">Book Review</a>  &nbsp;   <font color=FF0000>Thursday February 10</font>
       &nbsp; &nbsp; &nbsp;
-    </td> <td> 100 </td>
+    </td> <td> 100 </td>-->
   </tr>
   <tr>
     <td></td><td>
-      <a href="Second_paper.html">Short Paper</a>  &nbsp;   <font color=**0000>Wednesday March 23</font>
+      <a href="Second_paper.html"></a>Short Paper  &nbsp;   <font color=**0000>Wednesday February 21</font>
       &nbsp; &nbsp; &nbsp;
     </td> <td> 100 </td>
   </tr>
   <tr>
     <td></td><td>
-      <a href="Term_paper.html"></a>Term Paper  &nbsp;   <font color=880000>7 May</font>
+      <a href="Second_paper.html"></a>Group quiz  &nbsp;   <font color=**0000>May 6 &mdash; 7</font>
       &nbsp; &nbsp; &nbsp;
-    </td> <td> 200 </td>
+    </td> <td> 60 </td>
   </tr>
   <tr>
     <td></td><td>
-      <a href="https://piazza.com/tamu/spring2024/math629/home">Piazza Participation</a> &nbsp;  
+      <a href="https://piazza.com/tamu/spring2024/math629/home">Piazza</a> Participation &nbsp;  
       &nbsp; &nbsp; &nbsp;
     </td> <td> 40 </td>
   </tr>
+  <tr>
+    <td></td><td>
+      <a href="Term_paper.html"></a>Term Paper  &nbsp;   <font color=880000>End of April</font>
+      &nbsp; &nbsp; &nbsp;
+    </td> <td> 200 </td>
+  </tr>
 </table>
 
-<font size=+1 color=880000>Short papers</font>
-The first paper will be a <a href="Book_Review.html">book review</a> (about 1000 words long).<br>
- &nbsp; In the <a href="Second_paper.html"></a>second paper, you will advocate a point of view on a topic to be assigned.
- The second paper is expected to be about the same length as the book review.
- This length guideline is to help you to choose to take the time to make a well-thought-out argument, and to signal that
-this need not be so all-consuming. 
- You will submit them both to turnitin.com as well as send me a .pdf.
- I will mark them for writing quality, both form and content. 
+<font size=+1 color=880000>Short paper</font>
+The first paper will be a <a href="HOM.html"></a>reflection on your experience on the history of mathematics, this is a new aassignment for
+me, and I am still formulating the prompts and a more careful descrition.
+ You will submit it both to turnitin.com as well as send me a .pdf.
+ I will mark it for writing quality, both form and content. 
 <br>
 <font size=+1 color=880000><a href="Term_paper.html"></a>Term Paper:</font>
-This should be significantly longer (2500-3000 words), so that you can properly develop your topic.
-This will include a round of peer-review sometime in mid-April.
-I will want you to have a topic chosen by early March. 
+This should be significantly longer (around 2000 words), so that you can properly develop your topic.
+This will include a round of peer-review and some preliminary steps, and a short presentation/discussion with me on its contents and what
+you learned from it.
+I will want you to have a topic chosen by mid February. 
 <br>
+
+<font size=+1 color=880000>Groups</font> Within the first 2 weeks, I'd like to have you form into six groups of three and one of two (there
+are 20 enrolled in the class).
+These groups will serve two purposes.
+First, they will be where peer-review of your term paper takes place.
+Second, some of the problems I assign (I think 6-12) will not be handed in for a grade, but you are to work on them with your peers.
+At the end of the semester, I will meet with each group to discuss those problems and their solutions (1 per person in a group).  You can
+get help from group members at this.
 
 
 <!---------------------------------------------------------------------------------------------------->
@@ -244,7 +264,7 @@ I will want you to have a topic chosen by early March.
 <HR>
 I have a long-standing interest in mathematics history, including biography, and have
 quite a few history books in my library.
-The is the third time I have taught this course (the others were in 2017 and 2018).
+The is the fifth time I have taught this course (the others were in 2017, 2018, 2020, and 2022).
 This course was created by colleagues at Texas A&amp;M, and I followed their lead when I
 first designed it. <br>
 
@@ -252,11 +272,10 @@ Most notably Professor Emeritus Allen created this course and developed extensiv
 the history of mathematics, some of which we will be using.
 I have also been greatly helped by Professor Emeritus Fulling and Professor Emerita Geller</a>.
 
-<!--------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------------------->
-<a href="syllabus.html">Required Disclaimers</a>.
+<a href="syllabus.html"></a>Required Disclaimers (not yet active).
 <!--------------------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------------------->
@@ -264,7 +283,7 @@ I have also been greatly helped by Professor Emeritus Fulling and Professor Emer
 
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Apr 19 09:41:25 CDT 2020--> <!-- hhmts end -->
-<p>Last modified: Sat Jan 13 20:13:48 GMT 2024 by sottile</p>
+<p>Last modified: Sun Jan 14 21:13:10 GMT 2024 by sottile</p>
 <!---------------------------------------------------------------------------------------------------->
 </body> </html>
 
