--- a/teaching/24.1/weeks/W01.html
+++ b/teaching/24.1/weeks/W01.html
@@ -4,7 +4,8 @@
 <!-------------------------------------------------------------->
   <H1><a href="../629.html">Math 629:  History of Mathematics</a><br>
   Frank Sottile
- </H1>
+  </H1>
+  <font color=red>This is not completed.  The assignment is innacurate.</font>
 <!---------------------------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------->
@@ -53,7 +54,11 @@
       Please read Professor Allen's <a href="../handouts/1000bc_Allen.pdf">A General View of Mathematics Before 1000 BCE</a>
       (BCE:= Before the Common Era, which is the synonym for BC that Historians use).  This focuses on Chinese and Indian Mathematics.
     </li>
-    <li>
+       <li>If you haven't yet done so, please watch the first 35 minutes of <a href="https://www.youtube.com/watch?v=2WcbPcGrQZU">The
+	   History of Mathematics</a>, a film with British Mathematician Marcus du Sautoy.
+	   This segment covers Egyptian and Babylonian Mathematics.
+       </li>    
+     <li>
     Read also Allen's <a href="../handouts/babylon_Allen.pdf">Babylonian Mathematics</a>.
     <font color=red>This has been observed to have a typo on page 6:
       vv&nbsp;vv&nbsp;&lt;v is equal to 2&times;60<sup>2</sup>+ 2&times;60 + 11 = 7331  (Allen has +21).<br>
@@ -77,8 +82,7 @@
     The quiz (on Gradescope) is three exceptionally short questions with even shorter answers that you need to take after you have
     completed the reading.
     There is a 10 minute time limit which is counted from the time you open the quiz, and the contribution towards this
-    week's grade will be minimal (between 5 and 10%).
-    <font color=magenta>This is the first semester I am having these concept quizzes.</font><br> 
+    week's grade will be minimal (between 5 and 10%).<br> 
     <font color=red>It is OK to discuss the homework among yourselves.  We all have something to learn from each other.</font><br>
     I ask you to type what you can, particularly longer written exercises, and that you be as neat as possible.<br>
     Here is a <a href="../HW/HW1.pdf">.pdf</a> and a  <a href="../HW/HW1.tex">LaTeX source</a> of the assignment.<br>
@@ -162,7 +166,7 @@
 
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts startLast modified: Thu Jan  9 13:35:43 CET 2020  --><!-- hhmts end -->
-<p>Last modified: Sat Jan 13 20:14:59 GMT 2024 by sottile</p>
+<p>Last modified: Sun Jan 14 21:14:51 GMT 2024 by sottile</p>
 
 <!---------------------------------------------------------------------------------------------------->
 
