--- a/teaching/24.1/weeks/W00.html
+++ b/teaching/24.1/weeks/W00.html
@@ -6,11 +6,10 @@
   Frank Sottile
  </H1>
 
-
 <!---------------------------------------------------------------------------------------------------->
 <HR>
 <!---------------------------------------------------------------------------------------------------->
-<a href="https://piazza.com/tamu/spring2024/math629">Sign Up</a>  Access Code: <tt>314159265</tt>.
+Piazza <a href="https://piazza.com/tamu/spring2024/math629">Sign Up</a>  Access Code: <tt>314159265</tt>.
 &nbsp; &nbsp;     <a href="http://piazza.com/tamu/spring2024/math629/home">Piazza Class page</a>.
 <!---------------------------------------------------------------------------------------------------->
 <HR>
@@ -18,13 +17,15 @@
 
 <font color=maroon><h3>Week 0: &le; 15 January 2024. </h3></font>
 <ul>
+  <li>First of all, Greetings from Churchill College, Cambridge, one of my alma maters.
+      I will be there (here?) the first four weeks of the semseter.
   <li>Your first homework will be to send me a short autobiography: <br>
     <ul>
       <li> Who you are, what is your mathematical and professional background, what do you do, what do you hope to get
            from this course, what library resources do you have available, have you ever taken a distance course before,
            etc.</li> 
       <li> Your postal address, as I will be sending you some material for course activities.</li>
-      <li> Your prefered email address, in case I need to write you directly.</li>
+      <li> Your preferred email address, in case I need to write you directly.</li>
       <li> Your favourite colour (be specific if possible).  I expect to send you a mathematical object in this color. </li>
       <li> The dates of your Spring Break (if any).  I use this to adjust deadlines in March.</li>
       <li>  You may (optionally) include any other information that you feel is worth mentioning or telling me. The
@@ -36,7 +37,7 @@
   <br>
   You should also send me your preferred email address.
   <br>
-  I likely will ask that you write a shorter version of this for public consumption by
+  I likely will ask that you write a shorter version of your autobiography for public consumption by
   the class, posting it in Piazza.</li>
 
   <li>Getting on Piazza is also absolutely necessary.
@@ -45,26 +46,29 @@
   
  
   <li>I will be using Gradescope for homework submission and weekly concept quizzes.
-    The sign up will through canvas, and this is likely the only use of canvas for this class.
-    I will anounce when the link is activated.
- </li>
+    The sign up is through canvas, and this is likely the only use of canvas for this class.
+  </li>
   
   <li>You need to get a copy of our book, by Stillwell.
    <br>
-  It is possible to download a <b>free version</b>  of the text through the TAMU library.<br>
+  It is possible to <a href="http://proxy.library.tamu.edu/login?url=https://dx.doi.org/10.1007/978-1-4419-6053-5">download
+     a <b>free version</b> of the text through the TAMU library</a>. <br>
   </li>
 
-  <li><font color=maroon><b>Reading</b></font>: (for week one)
+  <li><font color=maroon><b>Pre-Assignment</b></font>: (for week one)
     <ul>
-     <li> I would like you to read Allen's <a href="../handouts/Origins_Allen.pdf">The Origins of Mathematics</a>, which is
+    <li> I would like you to read Allen's <a href="../handouts/Origins_Allen.pdf">The Origins of Mathematics</a>, which is
          about the origins of counting.
          You should appreciate how difficult it is to delve into this question.
          This source become less complete nearer to its end, more like talking points in a lecture. 
     </li>
-    <li>Please read the discussion
-    of <a href="https://mathshistory.st-andrews.ac.uk/HistTopics/Babylonian_mathematics/">Babylonian 
-    Mathematics</a> at the St. Andrew's History of Mathematics page.</li>    
-     <li><font color=red>There will be more,</font> see the information page for <a href="W01.html">Week 1</a>
+       <li>Please watch the first 35 minutes of <a href="https://www.youtube.com/watch?v=2WcbPcGrQZU">The History of Mathematics</a>,
+	 a film with British Mathematician Marcus du Sautoy.    This segment covers Egyptian and Babylonian Mathematics.
+         The rest of the film covers the periods we will cover through week 5, feel free to watch the rest of it.  Note that I believe he
+	 has the history slightly wrong in the last segment.
+       </li>    
+     <li><font color=red>There will be more,</font> see the information page for <a href="W01.html">Week 1</a>.
+       This will be in its final form by the beginning of the semester.
      </li>   
     </ul>
   </li>
@@ -74,7 +78,7 @@
 <!---------------------------------------------------------------------------------------------------->
 <address></address>
 <!-- hhmts startLast modified: Thu Jan  9 13:35:43 CET 2020  --><!-- hhmts end -->
-<p>Last modified: Sat Jan 13 20:01:43 GMT 2024 by sottile</p>
+<p>Last modified: Sun Jan 14 21:13:59 GMT 2024 by sottile</p>
 
 </body> </html>
 
